Opened 13 years ago

Closed 12 years ago

#8963 closed bug (fixed)

[Sounds] focus cycling using Tab doesn't work

Reported by: diver Owned by: korli
Priority: normal Milestone: R1
Component: Preferences/Sounds Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev44622.

When pressing Tab focus stucks in <none> menu.

Attachments (1)

0001-Fix-8963.-Fixes-Sounds-focus-cycling-using-Tab.patch (825 bytes ) - added by Janus 12 years ago.

Download all attachments as: .zip

Change History (4)

comment:1 by Janus, 12 years ago

patch: 01

comment:2 by mmadia, 12 years ago

Applied in hrev44983. Thanks for all the fish! Patch, I mean patch.

comment:3 by mmadia, 12 years ago

Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.