Fix #8963. Fixes Sounds focus cycling using Tab

Signed-off-by: Matt Madia <mattmadia@gmail.com>